network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector: #must have in the network policy
    matchLabels:
      name: name
      role: role
  policyTypes:
  - Ingress
  - Egress
  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      namespaceSelector: #this is to limit the access based on the namespace as all pods with the label "ingres.podSelector.matchLabels.name" can access.
        matchLabels:
          name: prod
    - ipBlock:
        cidr: 192.168.2.0/32
    ports:
    - protocol: TCP
      port: 3306
  
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/24
    ports:
    - protocol: TCP
      port: 80

#Network policies are enforce by network solutions implemented on kubernetes cluster and not all support network policies 
#for example Flannel not support it.
